--- a/homeworkDOM/style.css
+++ b/homeworkDOM/style.css
@@ -1,3 +1,58 @@
+* {
+    margin: 0;
+}
+
 .ukraine {
     background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
+}
+
+.modal {
+    display: flex;
+    visibility: hidden;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.26);
+    justify-content: center;
+    align-items: center;
+    z-index: 30;
+}
+
+.modal__card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 500px;
+    width: 100%;
+    border-radius: 2px;
+    background-color: #ffffff;
+}
+
+.modal__close-block {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: 100%;
+    border-bottom: 1px solid #d4d4d5;
+}
+
+.modal__close-btn {
+    font-size: 24px;
+    border: 0;
+    margin: 7px 10px
+}
+
+.modal__message-block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal__message {
+    margin: 20px 0px;
+    font-weight: 300;
+}
+
+.modal.active {
+    visibility: visible;
 }
