--- a/homeworkPromise/style.css
+++ b/homeworkPromise/style.css
@@ -7,17 +7,20 @@
     border: 1px solid #d4d4d5;
     border-radius: 3px;
     padding: 10px;
+    margin-bottom: 15px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     max-width: 600px;
+    width: 100%;
 }
 
 .people__property {
     display: flex;
     flex-direction: row;
     align-items: center;
-
+    max-width: 600px;
+    width: 100%;
 }
 
 .people__property-name {
@@ -26,4 +29,25 @@
 
 .people__property-value {
     margin: 5px 10px;
+}
+
+.search {
+    display: flex;
+    max-width: 600px;
+    width: 100%;
+}
+
+.search__input {
+    font-size: 18px;
+    padding: 10px 18px;
+    margin-bottom: 16px;
+    max-width: 600px;
+    width: 100%;
+}
+
+.container {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
