--- a/homeworkPromise/style.css
+++ b/homeworkPromise/style.css
@@ -1,9 +1,9 @@
-.people {
+.resource {
     display: flex;
     flex-direction: column;
 }
 
-.people__card {
+.resource__card {
     border: 1px solid #d4d4d5;
     border-radius: 3px;
     padding: 10px;
@@ -15,7 +15,7 @@
     width: 100%;
 }
 
-.people__property {
+.resource__property {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -23,11 +23,11 @@
     width: 100%;
 }
 
-.people__property-name {
+.resource__property-name {
     margin: 5px 10px;
 }
 
-.people__property-value {
+.resource__property-value {
     margin: 5px 10px;
 }
 
@@ -50,4 +50,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.error {
+    color: #d60000;
 }
